fixed white space bug

--- a/docs/stylesheets/style-starter.css
+++ b/docs/stylesheets/style-starter.css
@@ -2507,7 +2507,8 @@ th {
 
 label {
   display: inline-block;
-  margin-bottom: 0.5rem; }
+  /*margin-bottom: 0.5rem;*/
+}
 
 button {
   border-radius: 0; }
